Updated swagger docs, implemented user remove from group API
